@@ -273,9 +273,10 @@ heplot(pottery.mod, terms=FALSE, add=TRUE, col="blue",
 #-- ANCOVA, assuming equal slopes
 rohwer.mod <- lm(cbind(SAT, PPVT, Raven) ~ SES + n + s + ns + na + ss, data=Rohwer)
 Anova(rohwer.mod)
-heplot(rohwer.mod)
+col <- c("red", "black", "blue", "cyan", "magenta", "brown", "gray")
+heplot(rohwer.mod, col=col)
 # Add ellipse to test all 5 regressors
-heplot(rohwer.mod, hypotheses=list("Regr" = c("n", "s", "ns", "na", "ss")))
+heplot(rohwer.mod, hypotheses=list("Regr" = c("n", "s", "ns", "na", "ss")), col=col, fill=TRUE)
 # View all pairs
 pairs(rohwer.mod, hypotheses=list("Regr" = c("n", "s", "ns", "na", "ss")))
 # or 3D plot
